[package]
name    = "wormhole-solana"
version = "0.1.0"
edition = "2021"

[lib]
name = "wormhole_solana"

[profile.release]
opt-level = 3
lto       = "thin"

[dependencies]
borsh           = "1.5.2"
bstr            = "0.2.17"
byteorder       = "1.4.3"
hex             = "0.4.3"
hex-literal     = "0.3.4"
sha3            = "0.10.4"
thiserror       = "1.0.34"
solana-program  = "2.1.0"

nom             = { version="7", default-features=false, features=["alloc"] }
primitive-types = { version="0.11", default-features=false }
wormhole-sdk = { git = "https://github.com/wormhole-foundation/wormhole", tag = "v2.17.1" }
serde_wormhole = { git = "https://github.com/wormhole-foundation/wormhole", tag = "v2.17.1"}

[dev-dependencies]
solana-program         = "2.1.0"
solana-program-test    = "2.1.0"
solana-sdk             = "2.1.0"
tokio                  = "1.14.1"

[patch.crates-io]
serde_wormhole = { git = "https://github.com/wormhole-foundation/wormhole", tag = "v2.17.1" }
